5.9.1
FIXES
    - Torghast tooltip issue

5.9.0
NEW
    - Added "player frame in target frame style"
    - Immersive Questing: Trigger "Next Gossip" with space
    - Show cooldowns at bags and character correct by using our own cooldown system
    - Added toggle for player PvP indicator
    - Added "World Quest Addon"-Skin (embedded into objectives tracker)
    - Added option to invert target/focus frame
    - Immersive Questing: Now works with auto accepting quest addons like AAP
    - Added Ember Court to the objectives tracker (Big thanks to Belazor for all the testing)
    - Added Credits

FIXES
    - Update "Raid Debuffs"
    - Guild auto repair if not in guild
    - Gamemenu fixes to better interact with ElvUI
    - Immersive Questing: "Ignore"-Button now only shows if applicable

5.8.0
NEW
    - Added Talent Set Manager support (button on hero panel)
    - Button flyout direction is based on actionbar screen position

FIXES
    - Fix castbar latency issue
    - Fix rested expbar issue
    - Fix inactive factions listed under classic and others
    - Fix Postal skin issue
    - Update "Raid Debuffs"
    - Possible fix for chatframe floating max error

5.7.5
FIXES
    - Fix chatframe fade
    - Update party portraits correctly
    - Fix arena headers
    - Fix keybind slash command
    - Fix arena prep frames overlaps with quests

5.7.4
FIXES
    - Fix some castbar issues
    - Fix some mirrottimer issues

5.7.2
FIXES
    - Fix scrolling in dropdown settings

5.7.1
FIXES
    - Fix hero panel icon border if Mail skin is disabled

5.7.0
NEW
    - Dropdown in GW2 Settings have now scrolling
    - "Important Raid & Dungeon" Debuffs can now be disable/enabled per debuffs
    - Added ingame notification if a new addon update is available (icon at the micromenu)
    - Added missing types at GW2 floating combat text