@@ -1,6 +1,7 @@
 5.9.1
 FIXES
     - Torghast tooltip issue
+    - Fix M+ timer overlapping (Thanks to Sethos)
 
 5.9.0
 NEW
